--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -1,15 +1,18 @@
-name : CI Pipeline
+name: CI Pipeline
 
-on: [push,pull_request]
+on: [push, pull_request]
 
 jobs:
- build:
-  runs-on: ubuntu-latest
-  steps: 
-  -name: Checkout Code
-   uses: actions/setup-python@v4
-   with:
-    python-version: '3.9'
-  -name: Run Tests
-   run: echo "Running tests..."
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v4  # Fixed incorrect checkout usage
 
+      - name: Setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.9'
+
+      - name: Run Tests
+        run: echo "Running tests..."
